# christmas-list

./: .gitignore  README.md  build.sh  main.tf  pyproject.toml  template.env  versions.tf
src/: app.py  create_list_inputs.py  handler.py
tests/: test_christmas_list.py
