[tool.poetry]
name = "christmas-list"
version = "0.1.0"
description = "A christmas list service for testing purposes"
authors = ["Zackery Ayscue <ztayscue@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
Flask = "^2.0.2"
aws-wsgi = "^0.2.7"
Flask-Inputs = "^0.3.0"
jsonschema = "^4.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
python-dotenv = "^0.19.2"
boto3 = "^1.20.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-exec-plugin.commands]
build = "poetry run ./build.sh"
deploy = "terraform apply --auto-approve"
